--- a/Redmine/Redmine/views/register/localizations/SignUp.strings
+++ b/Redmine/Redmine/views/register/localizations/SignUp.strings
@@ -25,6 +25,11 @@
 "error_account_exists" = "Account already exists";
 
 /*
+ OK
+ */
+"ok_account_created" = "Account %@ created successfully";
+
+/*
  OTHER
  */
 "alert_title" = "Advice";
